syntax = "proto3";
package tendermint.libs.common;
option go_package = "github.com/tendermint/tendermint/libs/common";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;
// Generate tests
option (gogoproto.populate_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.testgen_all) = true;

//----------------------------------------
// Abstract types

// Define these here for compatibility but use tmlibs/common.KVPair.
message KVPair {
  bytes key = 1;
  bytes value = 2;
}

// Define these here for compatibility but use tmlibs/common.KI64Pair.
message KI64Pair {
  bytes key = 1;
  int64 value = 2;
}
